<resources>
    <string name="app_name">graduate-work-android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Логін</string>
    <string name="no_account_yet_create_one">Зареєструватися</string>
    <string name="mobile_phone">Мобільний номер</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Реєстрація</string>
    <string name="confirm_password">Підтвердіть пароль</string>
    <string name="name">Ім\'я</string>
    <string name="last_name">Прізвище</string>
    <string name="user_name">Ім\'я користувача</string>
    <string name="birthday">Дата народження</string>
    <string name="or_login">Або логін</string>
    <string name="errorMobilePhone">Мобільний телефон повинен містити 10 символів без 38</string>
    <string name="required_field">Важливе поле</string>
    <string name="did_not_macth">Пароль та його підтвердження не співпадають</string>
    <string name="choosePicture">Виберіть картинку</string>
    <string name="picture">Картинка</string>
    <string name="camera">Камера</string>
    <string name="name_of_product">Ім\'я продукта</string>
    <string name="type_of_product">Тип продукта</string>
    <string name="upload_picture_with_ingredient">Загрузити фото</string>
    <string name="analyze">Проаналізувати</string>
    <string name="category">Категорія:</string>
    <string name="danger">Небезпека:</string>
    <string name="allergic">Алергія</string>
    <string name="hightDanger">Висока</string>
    <string name="product">Продукт:</string>
    <string name="list_allergies">Список Ваших алергій:</string>
    <string name="list_sup">Список харчових добавок:</string>
    <string name="name_allergic">Введіть назву алергії</string>
    <string name="add">Додати</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="allergics">Allergic</string>
    <string name="suppelement">Suppelement</string>
    <string name="histories">Історія</string>
    <string name="igredient">Склад</string>
    <string name="photo">Фото</string>
    <string name="nothing">У даному продукті харчових добавок чи алергій не знайдено</string>
    <string name="product_from_db">Продукт з бази даних</string>
</resources>
