<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.graduate_work_android.models.ResponseUploadImage" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/itemDark">

            <TextView
                android:id="@+id/allergic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/allergic"
                android:textColor="@color/red"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="@color/dark_orange"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/danger"
                app:layout_constraintTop_toTopOf="@id/allergic" />


            <TextView
                android:id="@+id/dangerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danger"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/allergic"
                app:layout_constraintTop_toBottomOf="@id/allergic" />

            <TextView
                android:id="@+id/danger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:text="@string/hightDanger"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/dangerText"
                app:layout_constraintTop_toTopOf="@id/dangerText" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>