<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.graduate_work_android.ui.home.allergic.AllergicViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:minWidth="300dp"
        android:minHeight="250dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:text="@string/name_allergic"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:drawablePadding="10dp"
                android:hint="@string/allergic"
                android:text="@={viewModel.name}"
                android:textColor="@android:color/white"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/border_button"
            android:padding="12dp"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:onClick="@{(view) -> viewModel.addAllergic()}"
            android:visibility="@{safeUnbox(viewModel.isLoader ? View.INVISIBLE : View.VISIBLE)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerLouder"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:visibility="@{safeUnbox(viewModel.isLoader ? View.VISIBLE : View.GONE)}"
            app:layout_constraintBottom_toBottomOf="@id/add"
            app:layout_constraintEnd_toEndOf="@id/add"
            app:layout_constraintStart_toStartOf="@id/add"
            app:layout_constraintTop_toTopOf="@id/add">

            <ProgressBar

                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>