<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.graduate_work_android.ui.login.LoginViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#34445e"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp">

            <ImageView
                android:id="@+id/imageEye"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_remove_red_eye_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!--  Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageEye">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:drawableStart="@drawable/ic_phone_android_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/mobile_phone"
                    android:inputType="phone"
                    android:text="@={viewModel.mobileNumber}"
                    android:textColor="@android:color/white"
                    tools:ignore="TextFields" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textMobile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:textColor="@android:color/white"
                    app:passwordToggleTint="#FFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/border_button"
                android:onClick="@{(view) -> viewModel.clickButton()}"
                android:padding="12dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="@{safeUnbox(viewModel.isLoader ? View.INVISIBLE : View.VISIBLE)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textPassword" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerLouder"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:background="@android:color/transparent"
                android:visibility="@{safeUnbox(viewModel.isLoader ? View.VISIBLE : View.GONE)}"
                app:layout_constraintBottom_toBottomOf="@id/btn_login"
                app:layout_constraintEnd_toEndOf="@id/btn_login"
                app:layout_constraintStart_toStartOf="@id/btn_login"
                app:layout_constraintTop_toTopOf="@id/btn_login">

                <ProgressBar

                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateTintMode="src_atop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:onClick="@{(view) -> viewModel.registration()}"
                android:text="@string/no_account_yet_create_one"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>