<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.graduate_work_android.ui.home.photo.PhotoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".ui.home.photo.PhotoFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textNamePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:drawableStart="@drawable/ic_supermarket"
                android:drawablePadding="10dp"
                android:hint="@string/name_of_product"
                android:inputType="text"
                android:text="@={viewModel.name}"
                android:textColor="@android:color/white"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textNameType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textNamePhoto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:drawableStart="@drawable/ic_diet"
                android:drawablePadding="10dp"
                android:hint="@string/type_of_product"
                android:inputType="text"
                android:text="@={viewModel.type}"
                android:textColor="@android:color/white"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/textNameType"
            android:onClick="@{(view) -> viewModel.clickButton()}">

            <ImageButton
                android:id="@+id/dateImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_attach"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@={viewModel.photoName}"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/dateImage"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/border_button"
            android:padding="12dp"
            android:text="@string/analyze"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:onClick="@{(view) -> viewModel.analyze()}"

            android:visibility="@{safeUnbox(viewModel.isLoader ? View.INVISIBLE : View.VISIBLE)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerLouder"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:visibility="@{safeUnbox(viewModel.isLoader ? View.VISIBLE : View.GONE)}"
            app:layout_constraintBottom_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toTopOf="@id/btn_login">

            <ProgressBar

                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>